# qveris-account-proxy

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.keeper  LICENSE  README.md  compose.keeper.yaml  compose.lite.yaml  compose.quickstart.yaml  compose.ui.yaml  compose.yaml  pyproject.toml  start.cmd  start.ps1  start.sh
examples/: accounts.example.json  keeper.example.json
scripts/: check_openapi.py
skills/qveris-proxy-maintenance/: SKILL.md
skills/qveris-proxy-maintenance/agents/: openai.yaml
skills/qveris-proxy-maintenance/references/: istoreos-deployment.md
src/qveris_keeper/: __init__.py  app.py  browser.py  config.py  service.py  state.py
src/qveris_proxy/: __init__.py  access_keys.py  admin.py  admin_ui.py  app.py  bootstrap.py  config.py  gate.py  headers.py  middleware.py  openapi_contract.py  pool.py  reload.py  routes.py  service.py  state.py  transports.py
src/qveris_proxy/admin_assets/: admin.css  admin.js  index.html
tests/: admin_copy_behavior.cjs  conftest.py  test_access_keys.py  test_admin_ui.py  test_app.py  test_config.py  test_examples.py  test_gate.py  test_headers.py  test_keeper_app.py  test_keeper_browser.py  test_keeper_config.py  test_keeper_helpers.py  test_keeper_service.py  test_onboarding_scripts.py  test_openapi_contract.py  test_persistence.py  test_pool.py  test_proxy_keys.py  test_reload.py  test_routes.py  test_transports.py
