[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "qveris-account-proxy"
version = "0.1.0"
description = "A Docker-ready, account-aware reverse proxy for the QVeris REST API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "HuLWe" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.11,<3",
  "uvicorn>=0.35,<1",
]

[project.urls]
Homepage = "https://github.com/HuLWe/qveris-account-proxy"
Repository = "https://github.com/HuLWe/qveris-account-proxy"
Issues = "https://github.com/HuLWe/qveris-account-proxy/issues"

[project.optional-dependencies]
keeper = [
  "playwright>=1.55,<2",
  "tzdata>=2025.2,<2027",
]
test = [
  "asgi-lifespan>=2.1,<3",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qveris_proxy = ["admin_assets/*"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]
